--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "packageManager": "pnpm@10.18.2",
   "engines": {
-    "node": ">=22.12.0 <23",
+    "node": ">=20.18.0 <23",
     "pnpm": ">=10.18.2"
   },
   "name": "noxis-planner",
@@ -19,11 +19,12 @@
     "generate-themes": "tsx scripts/generate-themes.ts",
     "generate-tokens": "tsx scripts/generate-tokens.ts",
     "build": "tsx scripts/run-next.ts build",
+    "bundle:guard": "cross-env BUNDLE_GUARD=true pnpm run build && tsx scripts/bundle-guard.ts",
     "export": "cross-env DEPLOY_ARTIFACT_ONLY=true tsx scripts/deploy-gh-pages.ts",
     "prebuild:analyze": "pnpm run prebuild && node --input-type=module -e \"import { mkdirSync, rmSync } from 'node:fs'; import { resolve } from 'node:path'; const fallback = 'docs/bundle-report'; const raw = (process.env.BUNDLE_ANALYZE_OUTPUT_DIR ?? '').trim(); const target = raw.length > 0 ? raw : fallback; const absolute = resolve(target); rmSync(absolute, { recursive: true, force: true }); mkdirSync(absolute, { recursive: true });\"",
     "build:analyze": "cross-env ANALYZE=true BUNDLE_ANALYZE_OUTPUT_DIR=docs/bundle-report tsx scripts/run-next.ts build",
     "postbuild:analyze": "node --input-type=module -e \"import { cpSync, existsSync, mkdirSync, rmSync } from 'node:fs'; import { resolve } from 'node:path'; const fallback = 'docs/bundle-report'; const raw = (process.env.BUNDLE_ANALYZE_OUTPUT_DIR ?? '').trim(); const target = raw.length > 0 ? raw : fallback; const absolute = resolve(target); const source = resolve('.next', 'analyze'); if (existsSync(source)) { rmSync(absolute, { recursive: true, force: true }); mkdirSync(absolute, { recursive: true }); cpSync(source, absolute, { recursive: true }); console.log(`Bundle analysis artifacts saved to ${target}`); } else { console.warn('Bundle analyzer output not found at', source); }\"",
-    "analyze": "pnpm run build:analyze",
+    "analyze": "pnpm run prebuild:analyze && pnpm run build:analyze && pnpm run postbuild:analyze",
     "start": "tsx scripts/run-next.ts start -p 3000",
     "lint": "cross-env ESLINT_USE_FLAT_CONFIG=true pnpm exec eslint --cache --cache-location .eslintcache src",
     "lint:ci": "cross-env ESLINT_USE_FLAT_CONFIG=true pnpm exec eslint --cache --cache-location .eslintcache src --max-warnings=0",
@@ -32,7 +33,9 @@
     "test": "cross-env NODE_OPTIONS=--max-old-space-size=12288 VITEST_MAX_THREADS=1 vitest",
     "test:ci": "node --max-old-space-size=8192 ./node_modules/vitest/vitest.mjs run --reporter=default --reporter=junit --outputFile artifacts/unit/junit.xml --coverage --coverage.reporter=lcov --coverage.reporter=json-summary",
     "audit:ci": "pnpm audit --audit-level=high --json > audit-report.json || true; node scripts/audit-ci-report.mjs audit-report.json",
-    "e2e:ci": "playwright test",
+    "e2e": "tsx scripts/run-e2e.ts",
+    "e2e:ci": "cross-env PLAYWRIGHT_INSTALL=false pnpm run e2e",
+    "sb:build": "cross-env STORYBOOK_BUILD=1 pnpm exec storybook build --config-dir storybook --output-dir storybook-static",
     "lint:design": "cross-env ESLINT_USE_FLAT_CONFIG=true pnpm exec eslint --cache --cache-location .eslintcache --no-warn-ignored \"{app,src}/**/*.{js,jsx,ts,tsx}\"",
     "design-lint": "pnpm run lint:design",
     "guard:artifacts": "cross-env TSX_COMPILE_CACHE=0 tsx scripts/guard-artifacts.ts",
