--- a/.github/workflows/codex-autofix.yml
+++ b/.github/workflows/codex-autofix.yml
@@ -17,7 +17,8 @@ jobs:
   autofix:
     if: >-
       github.event.workflow_run.conclusion == 'failure' &&
-      github.event.workflow_run.head_repository.fork != true
+      github.event.workflow_run.head_repository.fork != true &&
+      secrets.OPENAI_API_KEY != ''
     name: Run Codex autofix
     runs-on: ubuntu-latest
 
