fix: skip pages workflow when site disabled

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -27,6 +27,7 @@ concurrency:
 jobs:
   # Build job
   build:
+    if: ${{ github.event.repository && github.event.repository.has_pages }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -111,6 +112,7 @@ jobs:
 
   # Deployment job
   deploy:
+    if: ${{ github.event.repository && github.event.repository.has_pages }}
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
