--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,50 +28,40 @@ jobs:
       matrix:
         include:
           - name: Lint
-            node: "22.x"
+            node: "22.12.0"
             command: pnpm run lint:ci
           - name: Type check
-            node: "22.x"
+            node: "22.12.0"
             command: pnpm run typecheck:ci
           - name: Unit tests
-            node: "22.x"
+            node: "22.12.0"
             command: pnpm test:ci
           - name: Next build + bundle guard
-            node: "22.x"
+            node: "22.12.0"
             command: pnpm run bundle:guard
             cache-next: true
           - name: Storybook build (Node 20)
-            node: "20.x"
+            node: "20.17.0"
             command: pnpm run sb:build
             cache-storybook: true
           - name: Playwright E2E
-            node: "22.x"
+            node: "22.12.0"
             command: pnpm e2e:ci
             cache-playwright: true
 
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      - name: Write CI Node version file
+        run: printf '%s\n' "${{ matrix.node }}" > .github/.ci-node-version
+
+      - name: Setup Node.js and dependencies
+        uses: ./.github/actions/setup-node-project
         with:
-          node-version: ${{ matrix.node }}
-          cache: pnpm
-          cache-dependency-path: pnpm-lock.yaml
-
-      - name: Enable Corepack
-        run: corepack enable
-
-      - name: Activate pnpm ${{ env.PNPM_VERSION }}
-        run: corepack prepare pnpm@${{ env.PNPM_VERSION }} --activate
-
-      - name: Configure pnpm retry strategy
-        run: |
-          pnpm config set retry 4 --global
-          pnpm config set fetch-retries 4 --global
-          pnpm config set fetch-retry-maxtimeout 60000 --global
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile --prefer-offline --ignore-scripts=false
+          skip-checkout: 'true'
+          node-version-file: .github/.ci-node-version
+          cache-node-modules: 'false'
+          install-command: pnpm config set retry 4 --global && pnpm config set fetch-retries 4 --global && pnpm config set fetch-retry-maxtimeout 60000 --global && pnpm install --frozen-lockfile --prefer-offline --ignore-scripts=false
 
       - name: Restore Next.js cache
         if: matrix.cache-next == 'true'
