--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,56 +13,79 @@ on:
       - work
 
 env:
-  PNPM_VERSION: 10.18.2
+  GALLERY_USAGE_ARTIFACT: gallery-usage
 
 concurrency:
   group: ci-${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
+  prepare-gallery:
+    name: Build gallery usage manifest
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Node project
+        uses: ./.github/actions/setup-node-project
+        with:
+          cache-suffix: ${{ vars.NODE_MODULES_CACHE_BUSTER }}
+
+      - name: Build gallery usage manifest
+        run: pnpm run build-gallery-usage
+
+      - name: Upload gallery usage artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.GALLERY_USAGE_ARTIFACT }}
+          path: |
+            src/components/gallery/generated-manifest.ts
+            src/components/gallery/generated-manifest.g.ts
+            src/components/gallery/usage.json
+            scripts/.cache/build-gallery-usage.json
+          if-no-files-found: error
+
   quality:
     name: ${{ matrix.name }}
     runs-on: ubuntu-latest
+    needs: prepare-gallery
     strategy:
       fail-fast: false
       matrix:
         include:
           - name: Lint
-            node: "22.x"
+            node: '22.12.0'
             command: pnpm run lint:ci
           - name: Type check
-            node: "22.x"
+            node: '22.12.0'
             command: pnpm run typecheck:ci
           - name: Unit tests
-            node: "22.x"
+            node: '22.12.0'
             command: pnpm test:ci
           - name: Next build + bundle guard
-            node: "22.x"
+            node: '22.12.0'
             command: pnpm run bundle:guard
             cache-next: true
           - name: Storybook build (Node 20)
-            node: "20.x"
+            node: '20.17.0'
             command: pnpm run sb:build
             cache-storybook: true
+            node-version-override: '20.17.0'
           - name: Playwright E2E
-            node: "22.x"
+            node: '22.12.0'
             command: pnpm e2e:ci
             cache-playwright: true
 
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      - name: Setup Node project
+        uses: ./.github/actions/setup-node-project
         with:
-          node-version: ${{ matrix.node }}
-          cache: pnpm
-          cache-dependency-path: pnpm-lock.yaml
-
-      - name: Enable Corepack
-        run: corepack enable
-
-      - name: Activate pnpm ${{ env.PNPM_VERSION }}
-        run: corepack prepare pnpm@${{ env.PNPM_VERSION }} --activate
+          cache-suffix: ${{ vars.NODE_MODULES_CACHE_BUSTER }}
+          skip-checkout: 'true'
+          install-command: pnpm install --frozen-lockfile --prefer-offline --ignore-scripts=false
+          node-version: ${{ matrix.node-version-override || '' }}
 
       - name: Configure pnpm retry strategy
         run: |
@@ -70,8 +93,11 @@ jobs:
           pnpm config set fetch-retries 4 --global
           pnpm config set fetch-retry-maxtimeout 60000 --global
 
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile --prefer-offline --ignore-scripts=false
+      - name: Download gallery usage manifest
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ env.GALLERY_USAGE_ARTIFACT }}
+          path: .
 
       - name: Restore Next.js cache
         if: matrix.cache-next == 'true'
