--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,31 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  prepare-gallery:
+    name: Prepare gallery manifest
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup Node.js and dependencies
+        uses: ./.github/actions/setup-node-project
+        with:
+          node-version: '22.12.0'
+          cache-node-modules: 'false'
+          install-command: pnpm config set retry 4 --global && pnpm config set fetch-retries 4 --global && pnpm config set fetch-retry-maxtimeout 60000 --global && pnpm install --frozen-lockfile --prefer-offline --ignore-scripts=false
+
+      - name: Build gallery manifest
+        run: pnpm run build-gallery-usage
+
+      - name: Upload gallery manifest
+        uses: actions/upload-artifact@v4
+        with:
+          name: gallery-manifest
+          path: |
+            src/components/gallery/generated-manifest.ts
+            src/components/gallery/generated-manifest.g.ts
+          if-no-files-found: error
+
   quality:
+    needs: prepare-gallery
     name: ${{ matrix.name }}
     runs-on: ubuntu-latest
     strategy:
@@ -52,14 +76,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Write CI Node version file
-        run: printf '%s\n' "${{ matrix.node }}" > .github/.ci-node-version
+      - name: Restore gallery manifest
+        uses: actions/download-artifact@v4
+        with:
+          name: gallery-manifest
+          path: .
 
       - name: Setup Node.js and dependencies
         uses: ./.github/actions/setup-node-project
         with:
           skip-checkout: 'true'
-          node-version-file: .github/.ci-node-version
+          node-version: ${{ matrix.node }}
           cache-node-modules: 'false'
           install-command: pnpm config set retry 4 --global && pnpm config set fetch-retries 4 --global && pnpm config set fetch-retry-maxtimeout 60000 --global && pnpm install --frozen-lockfile --prefer-offline --ignore-scripts=false
 
