--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -34,7 +34,8 @@ jobs:
       GITHUB_PAGES: 'true' # Signal the app to generate assets suitable for GitHub Pages
       BASE_PATH: ${{ endsWith(github.event.repository.name, '.github.io') && '' || github.event.repository.name }} # Configure base path for repo-hosted pages
       NEXT_PUBLIC_BASE_PATH: ${{ endsWith(github.event.repository.name, '.github.io') && '' || format('/{0}', github.event.repository.name) }} # Mirror base path on the client for routing
-      PUBLISH_BRANCH: ${{ vars.GH_PAGES_BRANCH || vars.GITHUB_PAGES_BRANCH || (endsWith(github.event.repository.name, '.github.io') && github.event.repository.default_branch) || '' }} # Select the branch to receive published artifacts
+      # Select the branch to receive published artifacts
+      PUBLISH_BRANCH: ${{ vars.GH_PAGES_BRANCH || vars.GITHUB_PAGES_BRANCH || (endsWith(github.event.repository.name, '.github.io') && github.event.repository.default_branch) || '' }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@ff7abcd0c3c05ccf6adc123a8cd1fd4fb30fb493 # v4.2.1
