--- a/.github/workflows/codex-autofix.yml
+++ b/.github/workflows/codex-autofix.yml
@@ -18,7 +18,7 @@ jobs:
     if: >-
       github.event.workflow_run.conclusion == 'failure' &&
       github.event.workflow_run.head_repository.fork != true &&
-      env.HAS_OPENAI_API_KEY == 'true'
+      secrets.OPENAI_API_KEY != ''
     name: Run Codex autofix
     runs-on: ubuntu-latest
 
