chore: relax guard artifacts enforcement

--- a/.github/workflows/nightly-regen.yml
+++ b/.github/workflows/nightly-regen.yml
@@ -18,11 +18,5 @@ jobs:
         with:
           node-version: '22.12.0'
 
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: Regenerate UI index
-        run: pnpm run regen-ui
-
-      - name: Build gallery usage
-        run: pnpm run build-gallery-usage
+      - name: Regenerate UI and gallery usage artifacts
+        run: pnpm run regen-ui && pnpm run build-gallery-usage
