--- a/.github/actions/setup-node-project/action.yml
+++ b/.github/actions/setup-node-project/action.yml
@@ -55,7 +55,7 @@ runs:
   steps:
     - name: Checkout
       if: ${{ inputs['skip-checkout'] != 'true' }}
-      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
       with:
         fetch-depth: "${{ inputs['checkout-fetch-depth'] }}"
         ref: "${{ inputs['checkout-ref'] != '' && inputs['checkout-ref'] || github.ref }}"
@@ -199,7 +199,7 @@ runs:
         standalone: true
 
     - name: Setup Node.js
-      uses: actions/setup-node@cdca7365b2dadb8aad0a33bc7601856ffabcc48e # v4.3.0
+      uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
       with:
         node-version: "${{ steps['node-requirement'].outputs.value }}"
         cache: "${{ steps.detect.outputs.manager }}"
@@ -357,7 +357,7 @@ runs:
     - name: Restore node_modules cache
       id: restore-node-modules
       if: ${{ inputs['cache-node-modules'] == 'true' }}
-      uses: actions/cache/restore@v4
+      uses: actions/cache/restore@0057852bfaa89a56745cba8c7296529d2fc39830 # v4.3.0
       with:
         path: ${{ github.workspace }}/node_modules
         key: "${{ steps['cache-key'].outputs.primary }}"
@@ -372,7 +372,7 @@ runs:
 
     - name: Save node_modules cache
       if: ${{ inputs['cache-node-modules'] == 'true' && steps['restore-node-modules'].outputs['cache-hit'] != 'true' }}
-      uses: actions/cache/save@v4
+      uses: actions/cache/save@0057852bfaa89a56745cba8c7296529d2fc39830 # v4.3.0
       with:
         path: ${{ github.workspace }}/node_modules
         key: "${{ steps['cache-key'].outputs.primary }}"
