--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
     name: Prepare gallery manifest
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
 
       - name: Setup Node.js and dependencies
         uses: ./.github/actions/setup-node-project
@@ -70,7 +70,7 @@ jobs:
             cache-storybook: true
 
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
 
       - name: Setup Node.js and dependencies
         uses: ./.github/actions/setup-node-project
@@ -79,7 +79,7 @@ jobs:
 
       - name: Restore Storybook cache
         if: matrix.cache-storybook
-        uses: actions/cache@v4
+        uses: actions/cache@0057852bfaa89a56745cba8c7296529d2fc39830 # v4.3.0
         with:
           path: node_modules/.cache/storybook
           key: ${{ runner.os }}-storybook-${{ hashFiles('pnpm-lock.yaml', 'storybook/**/*') }}
@@ -111,7 +111,7 @@ jobs:
             download-gallery: true
 
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
 
       - name: Download gallery manifest assets
         if: matrix.download-gallery
@@ -128,14 +128,14 @@ jobs:
 
       - name: Restore Next.js cache
         if: matrix.cache-next
-        uses: actions/cache@v4
+        uses: actions/cache@0057852bfaa89a56745cba8c7296529d2fc39830 # v4.3.0
         with:
           path: .next/cache
           key: ${{ runner.os }}-next-${{ matrix.node }}-${{ hashFiles('pnpm-lock.yaml') }}
 
       - name: Restore Playwright browsers
         if: matrix.cache-playwright
-        uses: actions/cache@v4
+        uses: actions/cache@0057852bfaa89a56745cba8c7296529d2fc39830 # v4.3.0
         with:
           path: ~/.cache/ms-playwright
           key: ${{ runner.os }}-playwright-${{ hashFiles('pnpm-lock.yaml') }}
