--- a/.github/workflows/nightly-regen.yml
+++ b/.github/workflows/nightly-regen.yml
@@ -11,7 +11,7 @@ jobs:
     continue-on-error: true
     steps:
       - name: Check out repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
 
       - name: Set up Node.js
         uses: ./.github/actions/setup-node-project
