--- a/.github/workflows/regen-bot.yml
+++ b/.github/workflows/regen-bot.yml
@@ -89,7 +89,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
         with:
           ref: ${{ needs.evaluate.outputs.head_sha }}
           fetch-depth: 0
@@ -170,7 +170,7 @@ jobs:
         uses: peter-evans/create-pull-request@v7
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          head: ${{ steps.branch_name.outputs.name }}
+          branch: ${{ steps.branch_name.outputs.name }}
           base: ${{ needs.evaluate.outputs.base_branch }}
           title: "chore: regenerate UI artifacts (run ${{ needs.evaluate.outputs.run_id }})"
           body: |
